# projects_realtime_template

./: CMakeLists.txt  README.md  glrenderer.cpp  glrenderer.h  main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h  submission-action.md
src/: glrenderer.h  main.cpp  mainwindow.cpp  realtime.cpp  settings.h
src/utils/: scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  shaderloader.h
utils/: scenefilereader.cpp  shaderloader.h
